--- a/login.html
+++ b/login.html
@@ -66,7 +66,7 @@
                                   </form>
                                 </div>
                                 <hr>
-                                <a href="wc-login" class="btn btn-block btn-success btn-rounded box-shadow">使用王村账号登录</a>
+                                <a href="https://github.com/login/oauth/authorize?client_id=3dc1bd64787bf72ce601&redirect_uri=https://ahm.pp.ua" class="btn btn-block btn-success btn-rounded box-shadow">使用王村账号登录</a>
 							
 								
                                 <br>
