--- a/login.html
+++ b/login.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
 <meta charset="utf-8">
@@ -45,10 +45,10 @@
                             <div class="misc-box">
                                 <div class="form-group">
                        
-                                <form action="post/login.html" method="post"> 
-                                    <label for="login_account">用户名/邮箱</label>
+                                <form action="" method="post"> 
+                                    <label for="login_account">用户名</label>
                                     <div class="group-icon">
-                                    <input name="username" id="username" type="text" placeholder="用户名 / 邮箱" class="form-control" required="">
+                                    <input name="username" id="username" type="text" placeholder="用户名" class="form-control" required="">
                                     <span class="icon-user text-muted icon-input"></span>
                                     </div>
                                 </div>
@@ -62,7 +62,7 @@
                                 </div>
                                 <div class="clearfix">
                       
-                                    <button type="submit" class="btn btn-block btn-primary btn-rounded box-shadow">登录</button>
+                                    <button type="submit" name="submit" class="btn btn-block btn-primary btn-rounded box-shadow">登录</button>
                                   </form>
                                 </div>
                                 <hr>
@@ -72,11 +72,11 @@
                                 <br>
                                 <div class="text-center">
                                     <a href="#">找回密码</a> |
-                                    <a href="register.html">没有账号？前往注册</a>
+                                    <a href="register.php">没有账号？前往注册</a>
                                 </div>
                             </div>
                             <div class="text-center misc-footer">
-                               <p>Copyright © 2019-2020 AHM神秘大陆 All Rights Reserved.</p>
+                               <p>Copyright © 2019-2021 AHM神秘大陆 All Rights Reserved.</p>
                             </div>
                         </div>
                     </div>
@@ -99,4 +99,13 @@
     </body>
 
 </html>
+
+
+
+
+
+
+
+
+
 
