--- a/index.html
+++ b/index.html
@@ -1,5 +1,3 @@
-
-
 <!DOCTYPE html>
 <html lang="zh-CN"><head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
@@ -62,7 +60,7 @@
 </div>
 
 <div class="col-10 d-flex justify-content-end align-items-center">
-AHM神秘大陆欢迎您~&nbsp;&nbsp;&nbsp;&nbsp;<a class="btn btn-pill btn-primary" href="login.php" role="button">登录</a>'; 
+AHM神秘大陆欢迎您~&nbsp;&nbsp;&nbsp;&nbsp;<a class="btn btn-pill btn-primary" href="login.html" role="button">登录</a>'; 
 } ?>
 </div>
 </div>
