--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+
+
 <!DOCTYPE html>
 <html lang="zh-CN"><head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
@@ -60,8 +62,7 @@
 </div>
 
 <div class="col-10 d-flex justify-content-end align-items-center">
-AHM神秘大陆欢迎您~&nbsp;&nbsp;&nbsp;&nbsp;<a class="btn btn-pill btn-primary" href="login.html" role="button">登录</a>'; 
-} ?>
+AHM神秘大陆欢迎您~&nbsp;&nbsp;&nbsp;&nbsp;<a class="btn btn-pill btn-primary" href="login.html" role="button">登录</a>
 </div>
 </div>
 </header>
@@ -451,9 +452,6 @@ QQ:1209984396</p>
 <a href="#" target="_blank">加入Q群</a> |
 <a href="#" target="_blank">联系服主</a>
 -->
-<?php if(isset($_SESSION['userid'])){
-    echo '欢迎您，',$username,'<br /><a target="_blank" href="/login_post.php?action=logout">退出登录</a>'; 
-} ?>
 <br>
 AHM神秘大陆(HYM钻石大陆) 版权所有 Copyright © 2019-2021 AHM X HYM All Rights Reserved. <br>
 <a href="javascript:void(0);" style="color:grey;text-decoration:none;" data-toggle="modal" data-target="#info">AHM神秘大陆欢迎您~</a><br>
