--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@ AHM神秘大陆欢迎您~&nbsp;&nbsp;&nbsp;&nbsp;<a class="btn btn-pill btn-prim
 </header>
 <div class="nav-scroller py-1 mb-2 " style="box-shadow: 0 5px 5px -5px rgba(0,0,0,.2);">
 <nav class="nav d-flex justify-content-start">
-<a class="p-2 " href="index.php">首页</a>
+<a class="p-2 " href="/">首页</a>
 <span class="p-2 text-muted">|</span>
 <a class="p-2 " href="https://beta.ahm.pp.ua/" target="_blank">动态</a>
 <span class="p-2 text-muted">|</span>
@@ -76,7 +76,7 @@ AHM神秘大陆欢迎您~&nbsp;&nbsp;&nbsp;&nbsp;<a class="btn btn-pill btn-prim
 <span class="p-2 text-muted">|</span>
 <a class="p-2 " href="https://jq.qq.com/?_wv=1027&k=oc2snPMu" target="_blank">加入QQ群</a><span class="p-2 text-muted">|</span><a class="p-2 " href="https://mc.163.com/pe/startup/?id=huawei&param=%7B%22from%22%3A%22rentGame%22%2C%22id%22%3A%224628575245012592063%22%7D&from=singlemessage" target="_blank">加入服务器</a>
 <span class="p-2 text-muted">|</span>
-<a class="p-2 " href="create_organization.php" target="_blank">创建组织</a>
+<a class="p-2 " href="create_organization.html" target="_blank">创建组织</a>
 <span class="p-2 text-muted">|</span>
 <a class="p-2 " href="https://www.office.com/?auth=2" target="_blank">Office登录</a>
 <span class="p-2 text-muted">|</span>
