--- a/login.html
+++ b/login.html
@@ -72,7 +72,7 @@
                                 <br>
                                 <div class="text-center">
                                     <a href="#">找回密码</a> |
-                                    <a href="register.php">没有账号？前往注册</a>
+                                    <a href="register.html">没有账号？前往注册</a>
                                 </div>
                             </div>
                             <div class="text-center misc-footer">
