--- a/register.html
+++ b/register.html
@@ -85,7 +85,7 @@
                                   <hr>
 
                                   <div class="text-center">
-                                      <a href="login.php">已有账号？前往登录</a>
+                                      <a href="login.html">已有账号？前往登录</a>
                                   </div>
                             </div>
                             <div class="text-center text-shadow">
