--- a/register.html
+++ b/register.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
 <meta charset="utf-8">
@@ -85,7 +85,7 @@
                                   <hr>
 
                                   <div class="text-center">
-                                      <a href="login.html">已有账号？前往登录</a>
+                                      <a href="login.php">已有账号？前往登录</a>
                                   </div>
                             </div>
                             <div class="text-center text-shadow">
@@ -100,11 +100,11 @@
  //alert("注册暂时关闭"); 
 
                     
- // Swal.fire({
-   //                             type: 'error',
-    //                            title: '注册失败',
-      //                          html: "管理员已关闭注册功能",
-        //                    })
+  Swal.fire({
+                                type: 'error',
+                                title: '注册失败',
+                                html: "管理员已关闭注册功能",
+                            })
  //window.location.href="/login.php"; 
  </script> 
         <!-- Common Plugins -->
