--- a/index.html
+++ b/index.html
@@ -69,9 +69,9 @@ AHM神秘大陆欢迎您~&nbsp;&nbsp;&nbsp;&nbsp;<a class="btn btn-pill btn-prim
 <nav class="nav d-flex justify-content-start">
 <a class="p-2 " href="/">首页</a>
 <span class="p-2 text-muted">|</span>
-<a class="p-2 " href="https://beta.ahm.pp.ua/" target="_blank">动态</a>
+<a class="p-2 " href="https://bbs.mcahm.eu.org/" target="_blank">动态</a>
 <span class="p-2 text-muted">|</span>
-<a class="p-2 " href="https://beta.ahm.pp.ua/" target="_blank">论坛</a>
+<a class="p-2 " href="https://bbs.mcahm.eu.org/" target="_blank">论坛</a>
 <span class="p-2 text-muted">|</span>
 <a class="p-2 " href="https://jq.qq.com/?_wv=1027&k=oc2snPMu" target="_blank">加入QQ群</a><span class="p-2 text-muted">|</span><a class="p-2 " href="https://mc.163.com/pe/startup/?id=huawei&param=%7B%22from%22%3A%22rentGame%22%2C%22id%22%3A%224628575245012592063%22%7D&from=singlemessage" target="_blank">加入服务器</a>
 <span class="p-2 text-muted">|</span>
